feat: example spliting [TODO]: Improve design

--- a/site/index.html
+++ b/site/index.html
@@ -1,16 +1,21 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Axo API</title>
+  <meta name="theme-color" content="#000000" />
+  <meta name="description" content="AxoScaffold is a Restful API scaffold for Go, built on top of stdlib and gorm.
+  It is designed to be simple, fast, and easy to use.
+  For more information, please visit: https://haume.me/axo" />
+  <link rel="manifest" href="/manifest.json" />
+  <link rel="icon" href="/favicon.ico" />
+  <title>🪸 Welcome to Axo 🌊</title>
 </head>
 
 <body>
-  <div id="root"></div>
-  <script type="module" src="/src/main.jsx"></script>
+  <div id="app"></div>
+  <script type="module" src="/src/main.tsx"></script>
 </body>
 
 </html>
