wip: Auth refresh/access token system

--- a/site/index.html
+++ b/site/index.html
@@ -1,21 +1,22 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en" data-theme="dark">
-
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="theme-color" content="#000000" />
-  <meta name="description" content="AxoScaffold is a Restful API scaffold for Go, built on top of stdlib and gorm.
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="theme-color" content="#000000" />
+    <meta
+      name="description"
+      content="Axo is a Restful API for Go, built on top of stdlib and gorm.
   It is designed to be simple, fast, and easy to use.
-  For more information, please visit: https://haume.me/axo" />
-  <link rel="manifest" href="/manifest.json" />
-  <link rel="icon" href="/favicon.ico" />
-  <title>🪸 Welcome to Axo 🌊</title>
-</head>
+  For more information, please visit: https://haume.me/axo"
+    />
+    <link rel="manifest" href="/manifest.json" />
+    <link rel="icon" href="/favicon.ico" />
+    <title>🪸 Welcome to Axo 🌊</title>
+  </head>
 
-<body>
-  <div id="app"></div>
-  <script type="module" src="/src/main.tsx"></script>
-</body>
-
+  <body>
+    <div id="app"></div>
+    <script type="module" src="/src/main.tsx"></script>
+  </body>
 </html>
